# personal-ats

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_EXPANSION_SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  design_pattern.md  docker-compose.yml  generate_dummy_data.py  makefile  pytest.ini  requirements-test.txt  requirements.txt  run_comprehensive_tests.py  run_organized_tests.py  test_requirements_comprehensive.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/web/: .eslintrc.json  .gitignore  Dockerfile  README.md  jest.all.config.ts  jest.config.ts  jest.integration.config.ts  package-lock.json  package.json  playwright.config.ts
apps/worker/: .gitignore  Dockerfile  README.md  config.yaml  config.yaml.example  pyproject.toml  quant_job_boards.txt  requirements-dev.txt  requirements.txt
apps/worker/ats_worker/: config.py  db.py  pipeline.py  prompts.py  run.py  score.py  tailor.py  util.py
apps/worker/ats_worker/fetch/: __init__.py  ashby.py  greenhouse.py  lever.py  pinpoint.py  workday.py
apps/worker/ats_worker/prompts/: score.txt  tailor.txt
apps/worker/resume/: README.md  master.tex.example
apps/worker/tests/: _helpers.py  conftest.py  test_config.py  test_db.py  test_fetch.py  test_fetch_new.py  test_notify.py  test_pipeline.py  test_run.py  test_schema_sync.py  test_score.py  test_tailor.py  test_util.py
apps/worker/tests/fixtures/: ashby.json  lever.json  pinpoint.json  pinpoint_linkless.json  schema.sql  workday_detail.json  workday_list.json
apps/worker/tests/integration/: test_pipeline_e2e.py
assets/: style.css
ats-next/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
ats-next/prisma/: schema.prisma
ats-worker/: .dockerignore  .env.example  README.md
ats-worker/ats_worker/: db.py  notify.py  run.py
ats-worker/resume/: README.md  resume.txt
ats-worker/tests/: test_config.py  test_db.py
backend/: __init__.py  database.py
callbacks/: __init__.py  applications.py  charts.py  history.py  status.py  table.py
components/: charts.py  forms.py  layout.py  modals.py  table.py  table_clean.py  tables.py
config/: constants.py  settings.py  styles.py
database/: manager.py  models.py
docs/: SETUP.md  pipeline-design.md
template/: BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_README.md  CLEAN_ARCHITECTURE_SUMMARY.md  HEATMAP_MIGRATION_SUMMARY.md  IMPLEMENTATION_COMPARISON.md  LAYOUT_IMPROVEMENT_SUMMARY.md  PAGINATION_FIX_SUMMARY.md  PAGINATION_REDESIGN_SUMMARY.md  REFACTORING_SUMMARY.md  app.py  app_backend.py  app_clean.py  app_redesigned.py  app_refactored.py
template/assets/: style.css
template/backend/: data_service.py  database.py  db_manager.py
template/callbacks/: app_callbacks.py
template/config/: styles.py
tests/: README.md  __init__.py  conftest.py
tools/: check_schema_drift.mjs  seed_db.mjs
utils/: constants.py  data.py  logger.py
(+66 files in other folders)
