[project]
name = "ats-worker"
version = "0.1.0"
description = "Semi-automated job-hunt pipeline worker for personal-ats"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "integration: full run_once end-to-end over a temp SQLite (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["ats_worker"]
branch = true

[tool.coverage.report]
# Single source of truth for the coverage floor: both `make test-coverage` and CI
# read it (CI does NOT pass --cov-fail-under), so the gate is identical and the
# ratchet lives in one place. Bump as coverage grows. (run.main()/cron + the lazy
# real-adapter bodies in tailor.py are legitimately uncovered by the hermetic
# suite — they just count as missing; the floor sits well under the real total.)
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.setuptools.packages.find]
include = ["ats_worker*"]
